--- a/trials-dowloards/src/App.css
+++ b/trials-dowloards/src/App.css
@@ -56,6 +56,7 @@ button {
   font-size: 14px;
   transition: background-color 0.3s ease;
   margin-top: 20px;
+  margin-left: 10px;
 }
 
 button:hover {
@@ -64,6 +65,10 @@ button:hover {
 
 button:focus {
   outline: none;
+}
+a{
+  text-decoration: none;
+  color: #fff;
 }
 
 /* Tableau des épreuves */
@@ -101,9 +106,39 @@ tr:nth-child(even) td {
   background-color: #f1f1f1;
 }
 
-tr:hover td {
-  background-color: #e0e0e0; /* Hover sur les lignes */
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  width: 400px;
+}
+
+.modal form {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal form div {
+  margin-bottom: 10px;
+}
+
+.modal form input {
+  padding: 10px;
+  margin-top: 5px;
+}
+
 
 /* Styles pour les petits écrans */
 @media screen and (max-width: 768px) {
